# V8

./: .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  ML_METAMODEL_README.md  Makefile  README.md  START_HERE.md  check_dependencies.py  main.py  paper_trading.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_connection.py  train_ml.py
backtest/: __init__.py  replay_backtest.py
backtesting/: engine.py
config/: __init__.py  config.yaml
core/: __init__.py  base_client.py  binance_client.py  binance_testnet_client.py  config_validator.py  thread_safety.py  virtual_binance_client.py
data/: __init__.py  data_loader.py  market_data.py
docs/: API_KEYS_GUIDE.md
execution/: __init__.py  order_executor.py  position_manager.py  trade_executor.py
ml_models/: __init__.py  ensemble.py  feature_engineering.py  lstm_model.py  meta_model.py  strategy_performance_tracker.py  trainer.py  xgboost_model.py
models/: __init__.py  position.py
risk/: __init__.py  circuit_breaker.py  portfolio_manager.py  position_sizer.py  stop_loss_manager.py  take_profit_manager.py
strategies/: __init__.py  base_strategy.py  dca_bot.py  grid_trading.py  ichimoku_scalping.py  market_making.py  ml_strategy.py  strategy_manager.py
tests/: __init__.py  conftest.py
tests/unit/: test_calculations.py  test_position.py  test_validators.py
utils/: __init__.py  calculations.py  exceptions.py  logger.py  persistence.py  portfolio.py  rate_limiter.py  safety.py  security.py  types.py  validators.py
