[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-trader-pro"
version = "1.0.0"
description = "Production-ready cryptocurrency trading bot with ML capabilities"
readme = "README.md"
requires-python = ">=3.9,<3.12"
license = {text = "MIT"}
authors = [
    {name = "Quantum Trader Team", email = "contact@quantumtrader.dev"}
]
keywords = [
    "trading",
    "cryptocurrency",
    "bitcoin",
    "binance",
    "algorithmic-trading",
    "machine-learning",
    "technical-analysis"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "ccxt>=4.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3.0",
    "colorama>=0.4.6",
    "requests>=2.31.0",
    "cryptography>=41.0.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
ml = [
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "optuna>=3.3.0",
]
deep-learning = [
    "tensorflow>=2.13.0",
    "keras>=2.13.0",
]
visualization = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "websockets>=11.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.9.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
]
all = [
    "quantum-trader-pro[ml,visualization,api,dev]",
]

[project.urls]
Homepage = "https://github.com/yourusername/quantum-trader-pro"
Documentation = "https://quantum-trader-pro.readthedocs.io/"
Repository = "https://github.com/yourusername/quantum-trader-pro"
Issues = "https://github.com/yourusername/quantum-trader-pro/issues"

[project.scripts]
quantum-trader = "main:main"

[tool.setuptools]
packages = ["config", "core", "data", "execution", "models", "risk", "strategies", "utils", "ml_models"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "api: API tests",
]

[tool.coverage.run]
source = ["config", "core", "data", "execution", "models", "risk", "strategies", "utils"]
omit = ["tests/*", "*/test_*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 2
